fix: update small CTA to adjust content alignment #191
There was mainly an issue with the placement of an icon within the small
CTA use case. The update allows for easier management of the additional
content.

Stylelint rules were adjusted to allow for new code without
having to also do a code refactor to meet linting needs.

Changes to be committed:
modified:   src/style.scss

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,7 +19,14 @@
 // layout styles - define any layout specifications for UI that is contained WITHIN the component
 // never define layout that would cause effect on element outside the scope of this component
 
-/* stylelint-disable no-descending-specificity, selector-class-pattern, selector-max-class, declaration-empty-line-before, order/properties-order */
+/* stylelint-disable
+  declaration-empty-line-before,
+  no-descending-specificity,
+  order/properties-order,
+  selector-class-pattern,
+  selector-max-class,
+  selector-max-combinators,
+  selector-max-compound-selectors */
 
 :host {
   display: inline-block;
@@ -109,7 +116,7 @@
     font-family: var(--ds-font-family-default, $ds-font-family-default);
     font-size: var(--ds-text-body-size-default, $ds-text-body-size-default);
     font-weight: var(--ds-text-body-default-weight, $ds-text-body-default-weight);
-    
+
     min-height: var(--ds-size-600, $ds-size-600);
     max-height: var(--ds-size-600, $ds-size-600);
 
@@ -212,16 +219,22 @@
 :host([small][type='cta']),
 :host([small='true'][type='cta']) {
   .hyperlink--cta {
+    display: flex;
+
     min-width: unset;
 
     min-height: 2.25rem;
     max-height: 2.25rem;
 
     padding: var(--ds-size-100, $ds-size-100) var(--ds-size-200, $ds-size-200);
-  
-    line-height: 1.3; // Arbitrary value to align the text vertically, matching auro-button 
-    
+
+    line-height: var(--ds-unitless-scale-140, $ds-unitless-scale-140);
+
     font-size: var(--ds-text-body-size-sm, $ds-text-body-size-sm);
+
+    svg {
+      top: unset;
+    }
   }
 }
 
@@ -230,6 +243,6 @@ svg {
   --auro-size-lg: 1rem;
 
   position: relative;
-  top: 4px;
+  top: 2px;
   margin-left: var(--ds-size-25, $ds-size-25);
 }
